--- a/crypto/netlify.toml
+++ b/crypto/netlify.toml
@@ -1,9 +1,7 @@
 [build]
   command = "npm run build"
-  publish = "/build"
-  base ="/"
+  publish = "dist"
 
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+# Optional: If your project is in a subfolder
+[context.production]
+  base = "crypto"  
