--- a/crypto/netlify.toml
+++ b/crypto/netlify.toml
@@ -2,6 +2,10 @@
   command = "npm run build"
   publish = "dist"
 
-# Optional: If your project is in a subfolder
-[context.production]
-  base = "crypto"  
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
+[build.environment]
+  NODE_VERSION = "18"
